Fixed home screen spacing, and added new icons.

--- a/ClassicTB2/chrome/messenger/accountCentral.css
+++ b/ClassicTB2/chrome/messenger/accountCentral.css
@@ -1,40 +1,6 @@
-/* ***** BEGIN LICENSE BLOCK *****
- * Version: MPL 1.1/GPL 2.0/LGPL 2.1
- *
- * The contents of this file are subject to the Mozilla Public License Version
- * 1.1 (the "License"); you may not use this file except in compliance with
- * the License. You may obtain a copy of the License at
- * http://www.mozilla.org/MPL/
- *
- * Software distributed under the License is distributed on an "AS IS" basis,
- * WITHOUT WARRANTY OF ANY KIND, either express or implied. See the License
- * for the specific language governing rights and limitations under the
- * License.
- *
- * The Original Code is Mozilla Communicator client code, released
- * March 31, 1998.
- *
- * The Initial Developer of the Original Code is
- * Netscape Communications Corporation.
- * Portions created by the Initial Developer are Copyright (C) 1998-1999
- * the Initial Developer. All Rights Reserved.
- *
- * Contributor(s):
- *   Richard Marti <mozilla@paenglab.ch>
- *
- * Alternatively, the contents of this file may be used under the terms of
- * either the GNU General Public License Version 2 or later (the "GPL"), or
- * the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
- * in which case the provisions of the GPL or the LGPL are applicable instead
- * of those above. If you wish to allow use of your version of this file only
- * under the terms of either the GPL or the LGPL, and not to allow others to
- * use your version of this file under the terms of the MPL, indicate your
- * decision by deleting the provisions above and replace them with the notice
- * and other provisions required by the GPL or the LGPL. If you do not delete
- * the provisions above, a recipient may use your version of this file under
- * the terms of any one of the MPL, the GPL or the LGPL.
- *
- * ***** END LICENSE BLOCK ***** */
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 /* ===== accountCentral.css ==========================================
   == Styles for the Messenger Account Central panel.
@@ -48,12 +14,12 @@
   background-color: Window;
 }
 
-separator {
-  height: 5px;
+spacer {
+  max-height: .5em;
 }
 
-separator.thin {
-  height: 15px;
+spacer.big {
+  max-height: 4em;
 }
 
 /* ::::: rows ::::: */
@@ -95,8 +61,7 @@ separator.thin {
 
 /* ::::: links ::::: */
 
-.acctCentralLinkText {
-  cursor: pointer;
+.acctCentralText {
   color: WindowText;
   -moz-padding-start: 45px;
   margin-top: .55em;
@@ -104,12 +69,29 @@ separator.thin {
   min-height: 32px; /* icon height */
 }
 
-.acctCentralLinkText:hover {
+.acctCentralNewAcctText {
+  color: WindowText;
+  -moz-padding-start: 20px;
+  -moz-padding-end: 10px;
+}
+
+.acctCentralLinkText {
+  cursor: pointer;
+}
+
+.acctCentralLinkText:hover,
+.acctCentralLinkText:focus {
   color: -moz-NativehyperlinkText;
 }
 
 .acctCentralLinkText:hover:active {
   color: -moz-html-CellHighlight;
+}
+
+#CreateAccountsList {
+  display: block;
+  -moz-padding-start: 45px;
+  height: 50px;
 }
 
 #ReadMessages label {
@@ -168,6 +150,34 @@ separator.thin {
   background: url("chrome://messenger/skin/accountcentral/offline-settings.png") right no-repeat !important;
 }
 
+#CreateAccountMail,
+#CreateAccountMovemail {
+  background-image: -moz-image-rect(url("chrome://messenger/skin/icons/server.png"), 0, 16, 16, 0);
+  background-repeat: no-repeat;
+}
+
+#CreateAccountChat {
+  background: url("chrome://chat/skin/chat-16.png") no-repeat;
+}
+
+#CreateAccountNewsgroups {
+  background-image: -moz-image-rect(url("chrome://messenger/skin/icons/server.png"), 0, 64, 16, 48);
+  background-repeat: no-repeat;
+}
+
+#CreateAccountRSS {
+  background-image: -moz-image-rect(url("chrome://messenger-newsblog/skin/icons/rss-feed.png"), 0, 16, 16, 0);
+  background-repeat: no-repeat;
+}
+
+#CreateAccountMail:-moz-locale-dir(rtl),
+#CreateAccountMovemail:-moz-locale-dir(rtl),
+#CreateAccountChat:-moz-locale-dir(rtl),
+#CreateAccountNewsgroups:-moz-locale-dir(rtl),
+#CreateAccountRSS:-moz-locale-dir(rtl) {
+  background-position: right center;
+}
+
 #SubscribeImapFolders label {
   background: url("chrome://messenger/skin/accountcentral/manage-imap.png") no-repeat !important;
 }
@@ -197,13 +207,5 @@ separator.thin {
 }
 
 #JunkSettingsMail label:-moz-locale-dir(rtl) {
-  background: url("chrome://messenger/skin/icons/junk.png") right no-repeat !important;
-}
-
-#JunkSettingsNews label {
-  background: url("chrome://messenger/skin/icons/junk.png") no-repeat !important;
-}
-
-#JunkSettingsNews label:-moz-locale-dir(rtl) {
   background: url("chrome://messenger/skin/icons/junk.png") right no-repeat !important;
 }
